recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:4: error: not found: value hexaKoch
  hexaKoch(levels-1, length*0.14)
  ^Crab:6: error: not found: value hexaKoch
  hexaKoch(levels-1, length*0.14)
  ^Crab:8: error: not found: value hexaKoch
  hexaKoch(levels-1, length*0.14)
  ^