recursion.logo.lessons.recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
  if (levels!=0) {
  left(45)
  hexaKoch(levels-1, length*0.14)
  right(90)
  hexaKoch(levels-1, length*0.14)
  left(90)
  hexaKoch(levels-1, length*0.14)

  
  }
  else {avance(length)}
}